[package]
name = "politana-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
gloo-timers = { version = "0.3.0", features = ["futures"] }
js-sys = "0.3.85"
politana = { path = "../politana", features = ["internal-testing"] }
wasm-bindgen = "0.2.108"
wasm-bindgen-test = "0.3.58"
web-sys = { workspace = true }
