[package]
name = "politana"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
futures = "0.3.31"
js-sys = "0.3.83"
politana-view-macro = { path = "../politana-view-macro" }
serde = { version = "1.0.228", features = ["derive"] }
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
web-sys = { workspace = true }
wgpu = "27.0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = "0.8.8"
cargo_metadata = "0.23.1"
html-escape = "0.2.13"
rand = "0.10.0"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
wasm-bindgen-cli-support = "0.2.106"  # same as wasm-bindgen
wasm-opt = "0.116.1"

[features]
internal-testing = []
